data/derived/comb/progs/unify/prog3765.ml.out
Characters 374-375:
  0 
  ^
Error: This expression has type int but an expression was expected of type
         float
